@@ -1,13 +1,18 @@
 package com.readcircle.config;
 
+import org.springframework.beans.factory.annotation.Autowired; // Eklendi
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer; // Bu importu ekle
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy; // Eklendi
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter; // Eklendi
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.Arrays;
 import java.util.List;
@@ -15,37 +20,47 @@ import java.util.List;
 @Configuration
 public class SecurityConfig {
 
+    // 1. Yazdığımız filtreyi buraya çağırıyoruz
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                 .cors(Customizer.withDefaults())
+                .cors(Customizer.withDefaults())
+                .csrf(csrf -> csrf.disable())
 
-                 .csrf(csrf -> csrf.disable())
+                // 2. JWT Filtresini standart filtrenin önüne ekle
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
 
-                 .authorizeHttpRequests(auth -> auth
-                         .requestMatchers(
+                // 3. Oturum yönetimini Stateless (Durumsuz) yap.
+                // Çünkü JWT kullanıyoruz, sunucuda session tutmayacağız.
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(
                                 "/api/auth/**",
-                                "/api/distribution/**",
+                                "/api/distribution/**", // Test için açık bırakmıştık, artık kapatabilirsin istersen
                                 "/error"
                         ).permitAll()
-
-                         .anyRequest().authenticated()
+                        .anyRequest().authenticated()
                 );
 
         return http.build();
     }
 
-     @Bean
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-         configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://manevi-gece.vercel.app"));
-
-         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-         configuration.setAllowedHeaders(List.of("*"));
-
-         configuration.setAllowCredentials(true);
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://manevi-gece.vercel.app"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
